--- a/cart-service/src/main/resources/application.yml
+++ b/cart-service/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 server:
-  port: 8085
+  port: ${SERVER_PORT:8085}
 
 spring:
   application:
     name: cart-service
   datasource:
-    url: jdbc:postgresql://postgres-cart:5432/cartdb
-    username: postgres
-    password: 123
-    driver-class-name: org.postgresql.Driver
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/cartdb}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:Arka$123}
   jpa:
     hibernate:
       ddl-auto: update
@@ -20,11 +19,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka:8761/eureka/
-  instance:
-    prefer-ip-address: true
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
 
-aws:
-  region: ${AWS_REGION:us-east-1}
-  sqs:
-    abandoned-carts-queue-url: ${SQS_ABANDONED_CARTS_QUEUE_URL:https://sqs.us-east-1.amazonaws.com/320214163553/arka-abandoned-carts}
+sqs:
+  abandoned-cart-queue: ${SQS_ABANDONED_CART_QUEUE:}
