--- a/category-maintainer/src/main/resources/application.yml
+++ b/category-maintainer/src/main/resources/application.yml
@@ -1,14 +1,13 @@
 server:
-  port: 8084
+  port: ${SERVER_PORT:8084}
 
 spring:
   application:
     name: category-maintainer
   datasource:
-    url: jdbc:postgresql://postgres-category:5432/categorydb
-    username: postgres
-    password: 123
-    driver-class-name: org.postgresql.Driver
+    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/categorydb}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:Arka$123}
   jpa:
     hibernate:
       ddl-auto: update
@@ -20,6 +19,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka:8761/eureka/
-  instance:
-    prefer-ip-address: true
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
