--- a/review-service/src/main/resources/application.yml
+++ b/review-service/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 server:
-  port: 8090
+  port: ${SERVER_PORT:8090}
+
 spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/reviewsdb
+  application:
+    name: review-service
+
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka/}
